--- a/Front/src/app/dashboard/aprobados/aprobados.component.html
+++ b/Front/src/app/dashboard/aprobados/aprobados.component.html
@@ -79,10 +79,12 @@
 
                 <form class="form" (ngSubmit)="enviarCuenta(solicitud)" [formGroup]="formularioCuenta" #f="ngForm" *ngIf="!solicitud.fechaConsignacion">
                   <mat-action-row class="cuenta row">
+                    <p class="col-md-2">Valor A Consignar: {{solicitud.valorConsignar | number:'1.0-0'}}</p>
                     <p class="mr-md-5 col-md-6">Nota: Los Dias 29 al 31 Del Mes Se Facturaran Desde El 1 Del Siguiente Mes</p>
                     <mat-form-field class="form-group col-md-4 mr-md-5">
                       <mat-label>Fecha De Consignacion</mat-label>
                       <input type="date" matInput formControlName="fechaConsignacion" required>
+
                    </mat-form-field>
 
                     <button matbutton class="btn  btn-cuenta" type="submit" >Enviar</button>
