--- a/Front/src/app/dashboard/estudio/estudio.component.scss
+++ b/Front/src/app/dashboard/estudio/estudio.component.scss
@@ -23,3 +23,61 @@
   border-Radius: 2%;
   border-color: bisque;
 }
+
+
+// Desde aqui va la tabla de fechas
+
+table {
+  width: 100%;
+}
+
+// .mat-row:hover {
+//   background-color: rgb(21,84,154);
+// }
+
+
+tr.example-detail-row {
+  height: 0;
+}
+
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: rgb(206, 82, 82);
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+  background: #efefef;
+}
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+}
+
+.example-element-diagram {
+  min-width: 80px;
+  border: 2px solid black;
+  padding: 8px;
+  background-color: blue;
+  color:burlywood;
+  margin: 8px 0;
+  height: 104px;
+}
+
+.example-element-symbol {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: normal;
+
+}
+
+.example-element-description {
+  padding: 16px;
+}
+
+.example-element-description-attribution {
+  opacity: 0.5;
+}
